// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render map when not focused 1`] = `
<Component
  style={
    Object {
      "bottom": 0,
      "flexDirection": "column",
      "justifyContent": "flex-end",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
  testID="parade-map-screen"
>
  <LocationCard
    image={1}
    name="Come back soon"
    text="We are currently adding the events to the map. Check back later!"
  />
</Component>
`;

exports[`renders correctly 1`] = `
<Component
  style={
    Object {
      "bottom": 0,
      "flexDirection": "column",
      "justifyContent": "flex-end",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
  testID="parade-map-screen"
>
  <Map />
  <LocationCard
    image={1}
    name="Come back soon"
    text="We are currently adding the events to the map. Check back later!"
  />
</Component>
`;
